--- a/src/Fuz/AppBundle/Resources/views/Options/options-theme.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/Options/options-theme.html.twig
@@ -13,7 +13,7 @@
             <a href="#" class="collection-down btn btn-default" title="Move element down"><span class="glyphicon glyphicon-arrow-down"></span></a>
         </div>
         <div class="col-md-3">
-            <a href="#" class="collection-delete btn btn-default" title="Delete element"><span class="glyphicon glyphicon-trash"></span></a>
+            <a href="#" class="collection-remove btn btn-default" title="Delete element"><span class="glyphicon glyphicon-trash"></span></a>
             <a href="#" class="collection-add btn btn-default" title="Add element"><span class="glyphicon glyphicon-plus-sign"></span></a>
         </div>
         <div class="col-md-1">
