--- a/src/Fuz/AppBundle/Resources/views/Advanced/addressesTheme.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/Advanced/addressesTheme.html.twig
@@ -18,7 +18,7 @@
     <br/>
     <p class="text-center">
         <a href="#" class="collection-up btn btn-default">&lt;</a>
-        <a href="#" class="collection-delete btn btn-default">-</a>
+        <a href="#" class="collection-remove btn btn-default">-</a>
         <a href="#" class="collection-add btn btn-default">+</a>
         <a href="#" class="collection-down btn btn-default">&gt;</a>
     </p>
