--- a/src/Fuz/AppBundle/Resources/views/Advanced/collectionOfCollections.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/Advanced/collectionOfCollections.html.twig
@@ -62,7 +62,7 @@
             up: '<a href="#" class="btn btn-default"><span class="glyphicon glyphicon-arrow-up"></span> Move collection up</a>',
             down: '<a href="#" class="btn btn-default"><span class="glyphicon glyphicon-arrow-down"></span> Move collection down</a>',
             add: '<a href="#" class="btn btn-default"><span class="glyphicon glyphicon-plus-sign"></span> Add collection</a>',
-            delete: '<a href="#" class="btn btn-default"><span class="glyphicon glyphicon-trash"></span> Remove collection</a>',
+            remove: '<a href="#" class="btn btn-default"><span class="glyphicon glyphicon-trash"></span> Remove collection</a>',
             duplicate: '<a href="#" class="btn btn-default"><span class="glyphicon glyphicon-th-large"></span> Duplicate collection</a>',
             prefix: 'parent',
             allow_duplicate: true,
