--- a/src/Fuz/AppBundle/Resources/views/Options/eventCallbacks.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/Options/eventCallbacks.html.twig
@@ -11,12 +11,12 @@
     <h2>{{ block('title') }}</h2>
 
     <p>
-        Use <code>before_up</code>, <code>before_down</code>, <code>before_add</code>, <code>before-duplicate</code> and <code>before_delete</code>
+        Use <code>before_up</code>, <code>before_down</code>, <code>before_add</code>, <code>before-duplicate</code> and <code>before_remove</code>
         options to set a callback <strong>before</strong> applying an action to the collection.
     </p>
 
     <p>
-        Use <code>after_up</code>, <code>after_down</code>, <code>after_add</code>, <code>after-duplicate</code> and <code>after_delete</code>
+        Use <code>after_up</code>, <code>after_down</code>, <code>after_add</code>, <code>after-duplicate</code> and <code>after_remove</code>
         options to set a callback <strong>after</strong> applying an action to the collection.
     </p>
 
@@ -81,7 +81,7 @@
             before_up: function(collection, element) { return confirm("Do you really want to move the element up?"); },
             before_down: function(collection, element) { return confirm("Do you really want to move the element down?"); },
             before_add: function(collection, element) { return confirm("Do you really want to add the element?"); },
-            before_delete: function(collection, element) { return confirm("Do you really want to delete the element?"); },
+            before_remove: function(collection, element) { return confirm("Do you really want to delete the element?"); },
             before_duplicate: function(collection, element) { return confirm("Do you really want to duplicate the element?"); },
             allow_duplicate: true
         });
@@ -90,7 +90,7 @@
             after_up: function(collection, element) { return confirm("Do you really want to move the element up?"); },
             after_down: function(collection, element) { return confirm("Do you really want to move the element down?"); },
             after_add: function(collection, element) { return confirm("Do you really want to add the element?"); },
-            after_delete: function(collection, element) { return confirm("Do you really want to delete the element?"); },
+            after_remove: function(collection, element) { return confirm("Do you really want to delete the element?"); },
             after_duplicate: function(collection, element) { return confirm("Do you really want to duplicate the element?"); },
             allow_duplicate: true
         });
