--- a/src/Fuz/AppBundle/Resources/views/Options/withoutFormTheme.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/Options/withoutFormTheme.html.twig
@@ -33,11 +33,11 @@
             never given this information, do not set this option (the Symfony2 default value will be used).
         </li>
         <li>
-            <code>enable_add</code> should have the same value as the option in your form type. It will enable
+            <code>allow_add</code> should have the same value as the option in your form type. It will enable
             or disable the ability to add elements in the collection.
         </li>
         <li>
-            <code>enable_delete</code> should have the same value as the option in your form type. It will enable
+            <code>allow_remove</code> should have the same value as the option in your form type. It will enable
             or disable the ability to delete elements from the collection.
         </li>
     </ul>
@@ -69,13 +69,12 @@
     <script type="text/javascript">
 
         /*
-         * Please look at the source code because what you see is not what is written in the code
-         * https://github.com/ninsuo/symfony-collection/blob/master/demo/src/Fuz/AppBundle/Resources/views/Options/withoutFormTheme.html.twig
+         * Please look at the source code by clicking on the withoutFormTheme.html.twig file above
          */
         $('.form-collection').collection({
             prototype_name: '{{ form.values.vars.prototype.vars.name }}',
             allow_add: true,
-            allow_delete: true,
+            allow_remove: true,
             name_prefix:  '{{ form.values.vars.full_name }}'
         });
 
