wrong symfony version on title

--- a/src/Fuz/AppBundle/Resources/views/layout.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/layout.html.twig
@@ -1,6 +1,6 @@
 {% extends 'FuzQuickStartBundle::layout.html.twig' %}
 
-{% block brand %}Symfony2 Collection{% endblock %}
+{% block brand %}Symfony Collection{% endblock %}
 {% block title %}{% endblock %}
 
 {% block login %}{% endblock %}
