--- a/src/Fuz/AppBundle/Resources/views/Options/eventCallbacks.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/Options/eventCallbacks.html.twig
@@ -4,7 +4,7 @@
     <script src="{{ asset('bundles/fuzapp/js/collection/jquery.collection.js') }}"></script>
 {% endblock %}
 
-{% block title %}JavaScript options : events{% endblock %}
+{% block title %}JavaScript options : events on buttons{% endblock %}
 
 {% block body %}
 
