--- a/src/Fuz/AppBundle/Resources/views/Options/addButtonAtTheBottom.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/Options/addButtonAtTheBottom.html.twig
@@ -4,7 +4,7 @@
     <script src="{{ asset('bundles/fuzapp/js/collection/jquery.collection.js') }}"></script>
 {% endblock %}
 
-{% block title %}JavaScript options : change the "add" button's default location{% endblock %}
+{% block title %}JavaScript options : put only one "add" button at the bottom{% endblock %}
 
 {% block body %}
 
