--- a/src/Fuz/QuickStartBundle/Resources/views/macros.html.twig
+++ b/src/Fuz/QuickStartBundle/Resources/views/macros.html.twig
@@ -27,6 +27,13 @@
     </div>
 {% endmacro %}
 
+{% macro flash_error(message) %}
+    <div class="alert alert-danger alert-dismissible">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        {{ message }}
+    </div>
+{% endmacro %}
+
 {% macro form_general_errors(form) %}
     {%- if form.vars.errors|length > 0 -%}
         {%- for error in form.vars.errors -%}
@@ -105,7 +112,7 @@
     {%- spaceless %}
         {% if user != null %}
             {{ prefix }}
-           <img class="oauth-image" src="{{ asset('bundles/fuzquickstart/img/oauth/' ~ user.resourceOwner ~ '-small.png') }}" alt=""/>
+            <img class="oauth-image" src="{{ asset('apple-touch-icon.png') }}" alt=""/>
            {{ user.username }}
         {% endif %}
     {% endspaceless -%}
