--- a/src/Fuz/AppBundle/Resources/views/Advanced/fancyFormTheme.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/Advanced/fancyFormTheme.html.twig
@@ -11,7 +11,8 @@
     <h2>{{ block('title') }}</h2>
 
     <p>
-        An other example of theming a collection
+        An other example of theming a collection, where fields are aligned and labels are
+        disposed above each widget.
     </p>
 
     {{
