putting source code into tabs instead of giving github links

--- a/src/Fuz/AppBundle/Resources/views/Advanced/collectionOfCollections.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/Advanced/collectionOfCollections.html.twig
@@ -19,13 +19,6 @@
         In fact, that's easier to explain if you look at the sample displayed at the bottom of this page.
     </p>
 
-    {{
-        github([
-            'Controller/AdvancedController.php',
-            'Resources/views/Advanced/collectionOfCollections.html.twig',
-        ])
-    }}
-
     {%
         form_theme form
             'FuzAppBundle::jquery.collection.html.twig'
@@ -49,6 +42,14 @@
 
     <p>Code used:</p>
     <pre>{{ block('script') | e }}</pre>
+
+    {{
+        tabs([
+            'Base/BaseController.php',
+            'Controller/AdvancedController.php',
+            'Resources/views/Advanced/collectionOfCollections.html.twig',
+        ])
+    }}
 
 {% endblock %}
 
