--- a/src/Fuz/AppBundle/Resources/views/Options/givenMinimumElements.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/Options/givenMinimumElements.html.twig
@@ -12,13 +12,6 @@
 
     <p>Use <code>init_with_n_elements</code> option to ensure that your collection will be initialized with the given number of arguments.
 
-    {{
-        github([
-            'Controller/OptionsController.php',
-            'Resources/views/Options/givenMinimumElements.html.twig',
-        ])
-    }}
-
     {% form_theme form 'FuzAppBundle::jquery.collection.html.twig' %}
     {{ form(form) }}
 
@@ -32,6 +25,14 @@
 
     <p>Code used:</p>
     <pre>{{ block('script') | e }}</pre>
+
+    {{
+        tabs([
+            'Base/BaseController.php',
+            'Controller/OptionsController.php',
+            'Resources/views/Options/givenMinimumElements.html.twig',
+        ])
+    }}
 
 {% endblock %}
 
