--- a/src/Fuz/AppBundle/Resources/views/Options/hideMoveUpDown.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/Options/hideMoveUpDown.html.twig
@@ -16,14 +16,6 @@
 
     <p>Test it live: <input type="checkbox" id="test-it" /></p>
 
-    {{
-        github([
-            'Controller/OptionsController.php',
-            'Resources/views/Options/hideMoveUpDown.html.twig',
-            'Resources/views/Options/options-theme.html.twig',
-        ])
-    }}
-
     {% form_theme form 'FuzAppBundle::jquery.collection.html.twig' %}
     {{ form(form) }}
 
@@ -37,6 +29,15 @@
 
     <p>Code used:</p>
     <pre>{{ block('script') | e }}</pre>
+
+    {{
+        tabs([
+            'Base/BaseController.php',
+            'Controller/OptionsController.php',
+            'Resources/views/Options/hideMoveUpDown.html.twig',
+            'Resources/views/Options/options-theme.html.twig',
+        ])
+    }}
 
 {% endblock %}
 
