--- a/src/Fuz/AppBundle/Resources/views/Options/positionField/positionField.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/Options/positionField/positionField.html.twig
@@ -71,7 +71,8 @@
     <script type="text/javascript">
 
         $('.actions-collection').collection({
-            position_field_selector: '.my-position'
+            position_field_selector: '.my-position',
+            allow_duplicate: true
         });
 
     </script>
