--- a/src/Fuz/AppBundle/Resources/views/Home/home.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/Home/home.html.twig
@@ -4,7 +4,7 @@
     <script src="{{ asset('bundles/fuzapp/js/collection/jquery.collection.js') }}"></script>
 {% endblock %}
 
-{% block title %}A jQuery plugin to manage your Symfony2 form collections{% endblock %}
+{% block title %}A jQuery plugin to manage your Symfony form collections{% endblock %}
 
 {% block body %}
 
