still caps shit

--- a/src/Fuz/AppBundle/Resources/views/Options/PositionField/positionField.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/Options/PositionField/positionField.html.twig
@@ -19,7 +19,7 @@
     {%
         form_theme form
             'FuzAppBundle::jquery.collection.html.twig'
-            'FuzAppBundle:Options/positionField:formTheme.html.twig'
+            'FuzAppBundle:Options/PositionField:formTheme.html.twig'
     %}
 
     {{ form(form) }}
