--- a/src/Fuz/AppBundle/Resources/views/Basic/basic.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/Basic/basic.html.twig
@@ -23,9 +23,10 @@
 
     <hr/>
 
-    <p>Code used:</p>
+    <p>Code used to initialize the collection:</p>
     <pre>{{ block('script') | e }}</pre>
 
+    <p>Full Symfony code:</p>
     {{
         tabs([
             'Controller/BasicController.php',
